--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,12 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob":"**/*",
+                "input":"src/assets/images",
+                "output":"/"
+              }
             ],
             "styles": [
               "src/styles.scss"
@@ -122,5 +127,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
